[package]
name = "djotters"
version = "0.1.4"
authors = ["Anthony Alaribe <anthonyalaribe@gmail.com>"]
description = "Djot (Markdown) parser that runs at hyper speeds!"
license = "MIT/Apache-2.0"
repository = "https://github.com/tonyalaribe/djotters"
edition = "2018"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.1"
pretty_assertions = "1.4.0"
html-escape = "0.2.13"
itertools = "0.8.2"
