[package]
name = "djotters"
version = "0.1.17"
authors = ["Anthony Alaribe <anthonyalaribe@gmail.com>"]
description = "Djot (Markdown) parser that runs at hyper speeds!"
license = "MIT/Apache-2.0"
repository = "https://github.com/tonyalaribe/djotters"
edition = "2018"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "8.0.0"
pretty_assertions = "1.4.1"
html-escape = "0.2.13"
itertools = "0.14.0"
slugify="0.1.0"
env_logger="0.11.3"
test-case = "3.3.1"
